--- a/src/startercode.ipynb
+++ b/src/startercode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5faf090",
+   "id": "8e7ceb87",
    "metadata": {},
    "source": [
     "# <center> Possibility of liquid oceans on the moons of gas giants </center>\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6c600fb",
+   "id": "f1e5a813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e11a3d1b",
+   "id": "34fdab6b",
    "metadata": {},
    "outputs": [
     {
@@ -54,21 +54,50 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "21000a9e",
+   "id": "6a6552f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def E_flux_tidal (M_h, R, n, a, e, K):\n",
+    "def E_flux_tidal (M_h, R, w, a, e, K):\n",
     "    \n",
     "    G = 6.67430 * 10**(-11)\n",
     "    \n",
-    "    return K*(21/2)*(G*M_h**2*R**2*n*e**2)/a**6"
+    "    return K*(21/2)*(G*M_h**2*R**2*w*e**2)/a**6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e6bd4984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.237485937083581e-06"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M_h = 1.8987*10**27 # Jupiter's mass, kg\n",
+    "R = 1560*10**3 # Europa radius, m\n",
+    "v_avg = 13743.36 # m/s\n",
+    "a = 670900*10**3 # average orbital radius, m\n",
+    "w = v_avg/a\n",
+    "e = 0.009\n",
+    "K = 0.02 # \"love number for frozen interior, article2\"\n",
+    "\n",
+    "E_flux_tidal(M_h, R, w, a, e, K) # in J/s\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9a3fb9a9",
+   "id": "1b82d0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8a0a3afe",
+   "id": "acddaa6c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92394515",
+   "id": "f9f809c1",
    "metadata": {},
    "source": [
     "# Our model: melting a thick layer of ice"
@@ -116,21 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e9610d3e",
+   "execution_count": 21,
+   "id": "4455043b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample values based on Europa\n",
     "\n",
-    "thickness_ice_0 = 100 # km\n",
-    "R_total = 1550 # km"
+    "thickness_ice_0 = 100*10**3 # m\n",
+    "R_total = 1550*10**3 # m\n",
+    "\n",
+    "T_ice = 100 # K\n",
+    "T_melt = 273 # assumption for now\n",
+    "\n",
+    "heat_cap = 4.18 #kJ/(kg*K)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "50fc0f20",
+   "id": "48aa8275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "858aa059",
+   "id": "61f284c4",
    "metadata": {},
    "outputs": [],
    "source": []
